--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -20,7 +20,7 @@
   ],
   "notification_subscribers": [],
   "branches_to_filter": [],
-  "bilingual_type": "hover over"
+  "bilingual_type": "hover over",
   "continue_with_document_error": true,
   "skip_source_output_uploading": false,
   "need_preview_pull_request": false,
